# aetheris

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aetheris/: __init__.py  cli.py  config.py  errors.py  logging_setup.py
aetheris/agents/: __init__.py  api.py  graph.py  remediation.py
aetheris/common/: __init__.py  embeddings.py  eventbus.py  models.py
aetheris/gateway/: __init__.py  api.py
aetheris/mlops/: __init__.py  api.py  drift.py  registry.py
aetheris/privacy/: __init__.py  api.py  proxy.py  redactor.py
aetheris/vision/: __init__.py  api.py  compliance.py  detector.py  pipeline.py
deploy/: docker-compose.yml
deploy/k8s/: aetheris.yaml
docs/: architecture.md  dev-log-2026-07-15.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
tests/: test_apis.py  test_cores.py
